# whumpf

./: .env.example  .gitignore  Makefile  README.md  TERRAIN_3D_PROMPT.md  compose.yml  whumpf-planning-social-brief.md  whumpf-stack.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/app/: __init__.py  admin.py  config.py  db.py  http_retry.py  main.py  rate_limit.py  regions.py
backend/app/auth/: access.py  dependencies.py  encryption.py  service.py
backend/app/models/: __init__.py  friendship.py  route.py  route_share.py  status.py  strava.py  trip.py  trip_member.py  trip_route.py  user.py  waypoint.py
backend/app/routers/: auth.py  avalanche.py  friends.py  health.py  regions.py  routes.py  snowpack.py  status.py  strava.py  terrain.py  tiles.py  trips.py
backend/app/services/: cog_sampler.py  email.py  profile_summary.py  snotel.py  strava.py
backend/tests/: conftest.py  test_access.py  test_friends.py  test_health.py  test_route_shares.py  test_routes.py  test_tiles.py  test_trips.py
data/colormaps/: aspect_solar.npy  caltopo_slope.npy
data/ingest/: README.md
data/pipelines/: README.md  dem_pipeline.py  requirements.txt  terrain_rgb_pipeline.py
docs/: architecture.md  data-sources.md  external-services.md  runbook.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  auth.ts  main.tsx  observability.ts
martin/: README.md
scripts/: backup.sh  postgis-init.sql
titiler/config/: README.md
(+48 files in other folders)
